# splitter.rs

api/: .gitignore  Cargo.toml  build.rs
api/migrations/: 01_transactions.sql
api/src/: database.rs  main.rs  rpc.rs
proto/: splitter.proto
ui/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  CreateEventForm.tsx  PageContent.tsx  main.tsx
