[package]
name = "splitter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
tonic = "0.11.0"
tonic-web = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }

[build-dependencies]
tonic-build = "0.11.0"

